*tagen 2.0.0*
	* based on 'active_support'
	* support 'rubinius' version

	* remove 'PyFormat', 'Array#extract_extend_options[!]', 'Time:Deta'